--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <a class="nav-link" href="#">Pets</a>
                     <a class="nav-link" href="#">Journaling</a>
                     <a class="nav-link" href="#">Foodie</a>
+                    <a class="nav-link" href="#">jk</a>
                 </div>
             </div>
         </div>
