--- a/food.html
+++ b/food.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <!-- Make this the homepage (links to it when clicked on) -->
-            <!-- Doesn't change style when clicked -->
             <a class="navbar-brand" href="#">Chloe.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +25,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#">Pets</a>
+                    <a class="nav-link" href="#">Cuddles with Pets</a>
                     <a class="nav-link" href="#">Journaling</a>
                     <a class="nav-link active" aria-current="page" href="#">Foodie</a>
                 </div>
@@ -34,23 +33,24 @@
         </div>
     </nav>
 
-    <div class="introductionContainer text-center object-fit-xxl-contain border">
-        <div class="p-5">
+    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
+
+
+
+        <div class="text-center">
+            <div class="row">
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">LinkedIn.</a>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">Instagram.</a>
+                </div>
+            </div>
         </div>
     </div>
-
-    <div class="socialsContainer text-center">
-        <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                GitHub.
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                LinkedIn.
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                Slack.
-            </div>
-        </div>
     </div>
 
 </body>
