--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <!-- Make this the homepage (links to it when clicked on) -->
-            <!-- Doesn't change style when clicked -->
             <a class="navbar-brand" href="#">Chloe.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,38 +25,39 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <!-- Change this so that About me is not active -->
-                    <!-- <a class="nav-link active" aria-current="page" href="#">About Me</a> -->
-                    <a class="nav-link" href="#">Pets</a>
+                    <a class="nav-link" href="#">Cuddles with Pets</a>
                     <a class="nav-link" href="#">Journaling</a>
                     <a class="nav-link" href="#">Foodie</a>
-                    <a class="nav-link" href="#">jk</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <div class="introductionContainer text-center object-fit-xxl-contain border">
-        <div class="p-5">
-            <h1>Hi!</h1>
-            <p class="introductionText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit ad
-                molestias cupiditate voluptatum
-                repellendus quidem cum deserunt commodi. Itaque reprehenderit omnis laudantium obcaecati nihil impedit
-                est
-                maxime incidunt assumenda enim?</p>
-        </div>
-    </div>
+    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
 
-    <div class="socialsContainer text-center">
-        <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                GitHub.
+        <div class="text-center">
+            <div class="p-5">
+                <h1 class="p-5">Hi!</h1>
+                <p class="introductionText fst-italic p-5">This is a website describing some of my favourite hobbies.
+                    They are
+                    relaxing,
+                    introspective and enriching pastimes. </p>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                LinkedIn.
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                Slack.
+
+
+
+            <div class="text-center">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">LinkedIn.</a>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">Instagram.</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
