--- a/food.html
+++ b/food.html
@@ -25,9 +25,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#">Cuddles with Pets</a>
-                    <a class="nav-link" href="#">Journaling</a>
-                    <a class="nav-link active" aria-current="page" href="#">Foodie</a>
+                    <a class="nav-link" href="pets.html">Cuddles with Pets</a>
+                    <a class="nav-link" href="journaling.html">Journaling</a>
+                    <a class="nav-link active" aria-current="page" href="food.html">Foodie</a>
                 </div>
             </div>
         </div>
