--- a/journaling.html
+++ b/journaling.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Chloe.</a>
+            <a class="navbar-brand" href="index.html">Chloe.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,23 +35,58 @@
 
     <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
 
-        <div class="text-center">
+        <div class="text-center p-4">
 
-        </div>
+            <!-- carousel of journal prompts -->
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="grateful.jpg" class="imageItem img-fluid d-block"
+                            alt="First journaling prompt: Today I am grateful for... ">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="journal2.jpg" class="imageItem img-fluid d-block" alt="Second journaling prompt:">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="journal3.jpg" class="imageItem img-fluid d-block w-60" alt="Third journaling prompt:">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
 
-        <div class="text-center">
-            <div class="row">
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">LinkedIn.</a>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">Instagram.</a>
+            <div class="text-center p-3">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">LinkedIn.</a>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">Instagram.</a>
+                    </div>
                 </div>
             </div>
         </div>
+
+
     </div>
     </div>
 
