--- a/journaling.html
+++ b/journaling.html
@@ -53,10 +53,10 @@
                             alt="First journaling prompt: Today I am grateful for... ">
                     </div>
                     <div class="carousel-item">
-                        <img src="journal2.jpg" class="imageItem img-fluid d-block" alt="Second journaling prompt:">
+                        <img src="proud.jpg" class="imageItem img-fluid d-block" alt="Second journaling prompt: Three things that I am proud of today are...">
                     </div>
                     <div class="carousel-item">
-                        <img src="journal3.jpg" class="imageItem img-fluid d-block w-60" alt="Third journaling prompt:">
+                        <img src="becoming.jpg" class="imageItem img-fluid d-block w-60" alt="Third journaling prompt: The person I am becoming can...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
