--- a/food.html
+++ b/food.html
@@ -35,20 +35,52 @@
 
     <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
 
+        <div class="text-center p-4">
 
+            <div class="text-center">
 
-        <div class="text-center">
-            <div class="row">
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">LinkedIn.</a>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">Instagram.</a>
+                <div class="row">
+
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                        <div class="card recipes" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                        <div class="card recipes" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </div>
+
                 </div>
             </div>
+
+            <div class="text-center p-3">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">LinkedIn.</a>
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="link" href="https://www.linkedin.com/in/chloemaivu/" target="_blank">Instagram.</a>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
     </div>
