--- a/food.html
+++ b/food.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
+    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 160vh;">
 
         <div class="text-center p-4">
 
@@ -43,22 +43,22 @@
 
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="card recipes" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="salmon.jpg" class="card-img-top" alt="salmon dish">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h5 class="card-title">Salmon curry</h5>
+                              <p class="card-text">This is a healthy meal. It is perfect for weeknights. Garnish with lemon wedges.</p>
+                              <a href="#" class="btn btn-primary">Click for recipe</a>
                             </div>
                           </div>
                     </div>
 
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="card recipes" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="pho.jpg" class="card-img-top" alt="A bowl of pho">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h5 class="card-title">Pho</h5>
+                              <p class="card-text">This is a warming bowl of beef or chicken broth and rice noodles. This was my favourite meal as a child.</p>
+                              <a href="#" class="btn btn-primary">Click for recipe</a>
                             </div>
                           </div>
                     </div>
