--- a/journaling.html
+++ b/journaling.html
@@ -33,12 +33,12 @@
         </div>
     </nav>
 
-    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
+    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 120vh;">
 
         <div class="text-center p-4">
 
             <!-- carousel of journal prompts -->
-            <div id="carouselExampleIndicators" class="carousel slide">
+            <div id="carouselExampleIndicators" class="carousel slide carousel-fade">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -47,18 +47,20 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
+                
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="grateful.jpg" class="imageItem img-fluid d-block"
-                            alt="First journaling prompt: Today I am grateful for... ">
+                        <img src="becoming.jpg" class="imageItem"
+                            alt="First journaling prompt: The person I am becoming can... ">
                     </div>
                     <div class="carousel-item">
-                        <img src="proud.jpg" class="imageItem img-fluid d-block" alt="Second journaling prompt: Three things that I am proud of today are...">
+                        <img src="proud.jpg" class="imageItem" alt="Second journaling prompt: Three things that I am proud of today are...">
                     </div>
                     <div class="carousel-item">
-                        <img src="becoming.jpg" class="imageItem img-fluid d-block w-60" alt="Third journaling prompt: The person I am becoming can...">
+                        <img src="grateful.jpg" class="imageItem" alt="Third journaling prompt: Today I am grateful for...">
                     </div>
                 </div>
+
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -84,10 +86,9 @@
                     </div>
                 </div>
             </div>
+ 
         </div>
 
-
-    </div>
     </div>
 
 </body>
