--- a/pets.html
+++ b/pets.html
@@ -35,10 +35,19 @@
 
     <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
 
-        <div class="text-center">
+        <div class="text-center p-3">
+
+            <div class="d-flex"> 
+                <div class="petContainer p-4">
+                    <img src="three-legs.jpeg" class="petImage img-fluid rounded mx-auto d-block" alt="picture of a tabby cat">
+                </div>
+                <div class="petContainer p-4">
+                    <img src="iona.jpeg" class="petImage rounded mx-auto d-block" alt="picture of a brown dog">
+                </div>
+                <div class="petContainer p-4">
+                    <img src="midnight.jpg" class="petImage rounded mx-auto d-block" alt="picture of a black cat">
+                </div>
             </div>
-
-
 
             <div class="text-center">
                 <div class="row">
@@ -53,7 +62,13 @@
                     </div>
                 </div>
             </div>
+
         </div>
+
+
+
+    </div>
+
     </div>
 
 </body>
