removed repeated code

--- a/pets.html
+++ b/pets.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Chloe.</a>
@@ -37,10 +36,7 @@
 
         <div class="text-center p-3">
 
-            <div class="d-flex"> 
-                <div class="petContainer p-4">
-                    <img src="three-legs.jpeg" class="petImage img-fluid rounded mx-auto d-block" alt="picture of a tabby cat">
-                </div>
+            <div class="d-flex">
                 <div class="petContainer p-4">
                     <img src="iona.jpeg" class="petImage rounded mx-auto d-block" alt="picture of a brown dog">
                 </div>
@@ -49,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="text-center">
+            <div class="text-center socialsContainer">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
@@ -64,11 +60,6 @@
             </div>
 
         </div>
-
-
-
-    </div>
-
     </div>
 
 </body>
