--- a/food.html
+++ b/food.html
@@ -37,7 +37,7 @@
 
         <div class="text-center p-4">
 
-            <div class="text-center">
+            <div class="text-center p-4">
 
                 <div class="row">
 
@@ -45,22 +45,24 @@
                         <div class="card recipes" style="width: 18rem;">
                             <img src="salmon.jpg" class="card-img-top" alt="salmon dish">
                             <div class="card-body">
-                              <h5 class="card-title">Salmon curry</h5>
-                              <p class="card-text">This is a healthy meal. It is perfect for weeknights. Garnish with lemon wedges.</p>
-                              <a href="#" class="btn btn-primary">Click for recipe</a>
+                                <h5 class="card-title">Salmon curry</h5>
+                                <p class="card-text">This is a healthy meal. It is perfect for weeknights. Garnish with
+                                    lemon wedges.</p>
+                                <a href="#" class="btn btn-primary">Click for recipe</a>
                             </div>
-                          </div>
+                        </div>
                     </div>
 
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="card recipes" style="width: 18rem;">
                             <img src="pho.jpg" class="card-img-top" alt="A bowl of pho">
                             <div class="card-body">
-                              <h5 class="card-title">Pho</h5>
-                              <p class="card-text">This is a warming bowl of beef or chicken broth and rice noodles. This was my favourite meal as a child.</p>
-                              <a href="#" class="btn btn-primary">Click for recipe</a>
+                                <h5 class="card-title">Pho</h5>
+                                <p class="card-text">This is a warming bowl of beef or chicken broth and rice noodles.
+                                    This was my favourite meal as a child.</p>
+                                <a href="#" class="btn btn-primary">Click for recipe</a>
                             </div>
-                          </div>
+                        </div>
                     </div>
 
                 </div>
@@ -80,9 +82,7 @@
                 </div>
             </div>
 
-
         </div>
-    </div>
     </div>
 
 </body>
