--- a/journaling.html
+++ b/journaling.html
@@ -47,17 +47,19 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
-                
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="becoming.jpg" class="imageItem"
                             alt="First journaling prompt: The person I am becoming can... ">
                     </div>
                     <div class="carousel-item">
-                        <img src="proud.jpg" class="imageItem" alt="Second journaling prompt: Three things that I am proud of today are...">
+                        <img src="proud.jpg" class="imageItem"
+                            alt="Second journaling prompt: Three things that I am proud of today are...">
                     </div>
                     <div class="carousel-item">
-                        <img src="grateful.jpg" class="imageItem" alt="Third journaling prompt: Today I am grateful for...">
+                        <img src="grateful.jpg" class="imageItem"
+                            alt="Third journaling prompt: Today I am grateful for...">
                     </div>
                 </div>
 
@@ -86,7 +88,7 @@
                     </div>
                 </div>
             </div>
- 
+
         </div>
 
     </div>
