added bootstrap margins

--- a/pets.html
+++ b/pets.html
@@ -32,15 +32,15 @@
         </div>
     </nav>
 
-    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
+    <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 110vh;">
 
         <div class="text-center p-3">
 
             <div class="d-flex">
-                <div class="petContainer p-4">
+                <div class="petContainer m-3">
                     <img src="iona.jpeg" class="petImage rounded mx-auto d-block" alt="picture of a brown dog">
                 </div>
-                <div class="petContainer p-4">
+                <div class="petContainer m-3">
                     <img src="midnight.jpg" class="petImage rounded mx-auto d-block" alt="picture of a black cat">
                 </div>
             </div>
