added box shadows

--- a/food.html
+++ b/food.html
@@ -42,7 +42,7 @@
                 <div class="row">
 
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card recipes" style="width: 18rem;">
+                        <div class="card recipes boxShadow" style="width: 18rem;">
                             <img src="salmon.jpg" class="card-img-top" alt="salmon dish">
                             <div class="card-body">
                                 <h5 class="card-title">Salmon curry</h5>
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card recipes" style="width: 18rem;">
+                        <div class="card recipes boxShadow" style="width: 18rem;">
                             <img src="pho.jpg" class="card-img-top" alt="A bowl of pho">
                             <div class="card-body">
                                 <h5 class="card-title">Pho</h5>
