--- a/pets.html
+++ b/pets.html
@@ -37,11 +37,11 @@
         <div class="text-center p-3">
 
             <div class="d-flex">
-                <div class="petContainer m-3">
-                    <img src="iona.jpeg" class="petImage rounded mx-auto d-block" alt="picture of a brown dog">
+                <div class="petContainer m-4">
+                    <img src="iona.jpeg" class="boxShadow petImage rounded mx-auto d-block" alt="picture of a brown dog">
                 </div>
-                <div class="petContainer m-3">
-                    <img src="midnight.jpg" class="petImage rounded mx-auto d-block" alt="picture of a black cat">
+                <div class="petContainer m-4">
+                    <img src="midnight.jpg" class="boxShadow petImage rounded mx-auto d-block" alt="picture of a black cat">
                 </div>
             </div>
 
