cleaned up code

--- a/pets.html
+++ b/pets.html
@@ -38,10 +38,12 @@
 
             <div class="d-flex">
                 <div class="petContainer m-4">
-                    <img src="iona.jpeg" class="boxShadow petImage rounded mx-auto d-block" alt="picture of a brown dog">
+                    <img src="iona.jpeg" class="boxShadow petImage rounded mx-auto d-block"
+                        alt="picture of a brown dog">
                 </div>
                 <div class="petContainer m-4">
-                    <img src="midnight.jpg" class="boxShadow petImage rounded mx-auto d-block" alt="picture of a black cat">
+                    <img src="midnight.jpg" class="boxShadow petImage rounded mx-auto d-block"
+                        alt="picture of a black cat">
                 </div>
             </div>
 
