add hyperlinks to buttons

--- a/food.html
+++ b/food.html
@@ -48,7 +48,7 @@
                                 <h5 class="card-title">Salmon curry</h5>
                                 <p class="card-text">This is a healthy meal. It is perfect for weeknights. Garnish with
                                     lemon wedges.</p>
-                                <a href="#" class="btn btn-primary">Click for recipe</a>
+                                <a href="https://cafedelites.com/creamy-garlic-butter-tuscan-salmon/" target="_blank" class="btn btn-primary">Click for recipe</a>
                             </div>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                                 <h5 class="card-title">Pho</h5>
                                 <p class="card-text">This is a warming bowl of beef or chicken broth and rice noodles.
                                     This was my favourite meal as a child.</p>
-                                <a href="#" class="btn btn-primary">Click for recipe</a>
+                                <a href="https://helenrecipes.com/recipe-39-pho/" target="_blank" class="btn btn-primary">Click for recipe</a>
                             </div>
                         </div>
                     </div>
