--- a/journaling.html
+++ b/journaling.html
@@ -29,6 +29,10 @@
                     <a class="nav-link active" aria-current="page" href="journaling.html">Journaling</a>
                     <a class="nav-link" href="food.html">Foodie</a>
                 </div>
+                <form class="d-flex searchContainer" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
             </div>
         </div>
     </nav>
