made overall design more cohesive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="text-center">
             <div class="p-5">
                 <h1 class="p-5">Hi!</h1>
-                <p class="introductionText fst-italic p-5">This is a website describing some of my favourite hobbies.
+                <p class="introductionText boxShadow rounded fst-italic p-5">This is a website describing some of my favourite hobbies.
                     They are
                     relaxing,
                     introspective and enriching pastimes. </p>
