--- a/journaling.html
+++ b/journaling.html
@@ -54,15 +54,15 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="becoming.jpg" class="imageItem"
+                        <img src="becoming.jpg" class="imageItem rounded boxShadow"
                             alt="First journaling prompt: The person I am becoming can... ">
                     </div>
                     <div class="carousel-item">
-                        <img src="proud.jpg" class="imageItem"
+                        <img src="proud.jpg" class="imageItem rounded boxShadow"
                             alt="Second journaling prompt: Three things that I am proud of today are...">
                     </div>
                     <div class="carousel-item">
-                        <img src="grateful.jpg" class="imageItem"
+                        <img src="grateful.jpg" class="imageItem rounded boxShadow"
                             alt="Third journaling prompt: Today I am grateful for...">
                     </div>
                 </div>
