--- a/food.html
+++ b/food.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Chloe.</a>
@@ -32,47 +31,39 @@
                 <form class="d-flex searchContainer" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
+                </form>
             </div>
         </div>
     </nav>
-
     <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 160vh;">
-
-        <div class="text-center p-4">
-
-            <div class="text-center p-4">
-
-                <div class="row">
-
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card recipes boxShadow" style="width: 18rem;">
-                            <img src="salmon.jpg" class="card-img-top" alt="salmon dish">
-                            <div class="card-body">
-                                <h5 class="card-title">Salmon curry</h5>
-                                <p class="card-text">This is a healthy meal. It is perfect for weeknights. Garnish with
-                                    lemon wedges.</p>
-                                <a href="https://cafedelites.com/creamy-garlic-butter-tuscan-salmon/" target="_blank" class="btn btn-primary">Click for recipe</a>
-                            </div>
+        <div class="text-center p-5">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="card recipes boxShadow" style="width: 18rem;">
+                        <img src="salmon.jpg" class="card-img-top" alt="salmon dish">
+                        <div class="card-body">
+                            <h5 class="card-title">Salmon curry</h5>
+                            <p class="card-text">This is a healthy meal. It is perfect for weeknights. Garnish with
+                                lemon wedges.</p>
+                            <a href="https://cafedelites.com/creamy-garlic-butter-tuscan-salmon/" target="_blank"
+                                class="btn btn-primary">Click for recipe</a>
                         </div>
                     </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card recipes boxShadow" style="width: 18rem;">
-                            <img src="pho.jpg" class="card-img-top" alt="A bowl of pho">
-                            <div class="card-body">
-                                <h5 class="card-title">Pho</h5>
-                                <p class="card-text">This is a warming bowl of beef or chicken broth and rice noodles.
-                                    This was my favourite meal as a child.</p>
-                                <a href="https://helenrecipes.com/recipe-39-pho/" target="_blank" class="btn btn-primary">Click for recipe</a>
-                            </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="card recipes boxShadow" style="width: 18rem;">
+                        <img src="pho.jpg" class="card-img-top" alt="A bowl of pho">
+                        <div class="card-body">
+                            <h5 class="card-title">Pho</h5>
+                            <p class="card-text">This is a warming bowl of beef or chicken broth and rice noodles.
+                                This was my favourite meal as a child.</p>
+                            <a href="https://helenrecipes.com/recipe-39-pho/" target="_blank"
+                                class="btn btn-primary">Click for recipe</a>
                         </div>
                     </div>
-
                 </div>
             </div>
-
-            <div class="text-center p-3">
+            <div class="text-center p-5">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
@@ -85,10 +76,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
 </body>
 
 </html>
