--- a/journaling.html
+++ b/journaling.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Chloe.</a>
@@ -32,15 +31,13 @@
                 <form class="d-flex searchContainer" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
+                </form>
             </div>
         </div>
     </nav>
 
     <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 120vh;">
-
         <div class="text-center p-4">
-
             <!-- carousel of journal prompts -->
             <div id="carouselExampleIndicators" class="carousel slide carousel-fade">
                 <div class="carousel-indicators">
@@ -51,7 +48,6 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
-
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="becoming.jpg" class="imageItem rounded boxShadow"
@@ -66,7 +62,6 @@
                             alt="Third journaling prompt: Today I am grateful for...">
                     </div>
                 </div>
-
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -78,8 +73,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
-            <div class="text-center p-3">
+            <div class="p-3">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
@@ -92,9 +86,7 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
     </div>
 
 </body>
