--- a/pets.html
+++ b/pets.html
@@ -31,7 +31,7 @@
                 <form class="d-flex searchContainer" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
+                </form>
             </div>
         </div>
     </nav>
@@ -39,7 +39,6 @@
     <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 110vh;">
 
         <div class="text-center p-3">
-
             <div class="d-flex">
                 <div class="petContainer m-4">
                     <img src="iona.jpeg" class="boxShadow petImage rounded mx-auto d-block"
@@ -50,8 +49,7 @@
                         alt="picture of a black cat">
                 </div>
             </div>
-
-            <div class="text-center socialsContainer">
+            <div class="socialsContainer">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <a class="link" href="https://github.com/chloemaivu/" target="_blank">GitHub.</a>
@@ -64,10 +62,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
 </body>
 
 </html>
