--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Chloe.</a>
@@ -32,24 +31,20 @@
                 <form class="d-flex searchContainer" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
+                </form>
             </div>
         </div>
     </nav>
-
     <div class="d-flex justify-content-center" style="background-image: url('backg.jpg'); height: 100vh;">
-
         <div class="text-center">
             <div class="p-5">
                 <h1 class="p-5">Hi!</h1>
-                <p class="introductionText boxShadow rounded fst-italic p-5">This is a website describing some of my favourite hobbies.
+                <p class="introductionText boxShadow rounded fst-italic p-5">This is a website describing some of my
+                    favourite hobbies.
                     They are
                     relaxing,
                     introspective and enriching pastimes. </p>
             </div>
-
-
-
             <div class="text-center">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
@@ -65,7 +60,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
